--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <meta name="author" content="Casibom">
   <meta name="description" content="Casibom güncel giriş adresi Canlı bahis, casino, slot oyunları ve özel bonuslarla hemen kazanmaya başla!">
   <title>Casibom | Güncel Adres - Casibom Güncel Giriş</title>
-  <link rel="canonical" href="https://tablamike.com/">
-  <link rel="alternate" hreflang="tr" href="https://tablamike.com">
-  <link rel="alternate" hreflang="az" href="https://tablamike.com">
-  <link rel="alternate" hreflang="pt" href="https://tablamike.com">
-  <link rel="alternate" hreflang="ru" href="https://tablamike.com">
-  <link rel="alternate" hreflang="uk" href="https://tablamike.com">
-  <link rel="alternate" hreflang="kk" href="https://tablamike.com">
-  <link rel="alternate" hreflang="ar" href="https://tablamike.com">
-  <link rel="alternate" hreflang="en" href="https://tablamike.com">
-  <link rel="alternate" hreflang="es" href="https://tablamike.com">
-  <link rel="alternate" hreflang="pl" href="https://tablamike.com">
+  <link rel="canonical" href="https://emkadeneme.github.io/emkatss//">
+  <link rel="alternate" hreflang="tr" href="https://emkadeneme.github.io/emkatss/">
+  <link rel="alternate" hreflang="az" href="https://emkadeneme.github.io/emkatss/">
+  <link rel="alternate" hreflang="pt" href="https://emkadeneme.github.io/emkatss/">
+  <link rel="alternate" hreflang="ru" href="https://emkadeneme.github.io/emkatss/">
+  <link rel="alternate" hreflang="uk" href="https://emkadeneme.github.io/emkatss/">
+  <link rel="alternate" hreflang="kk" href="https://emkadeneme.github.io/emkatss/">
+  <link rel="alternate" hreflang="ar" href="https://emkadeneme.github.io/emkatss/">
+  <link rel="alternate" hreflang="en" href="https://emkadeneme.github.io/emkatss/">
+  <link rel="alternate" hreflang="es" href="https://emkadeneme.github.io/emkatss/">
+  <link rel="alternate" hreflang="pl" href="https://emkadeneme.github.io/emkatss/">
 
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
   <style>
@@ -140,8 +140,8 @@
     {
       "@type": "Organization",
       "name": "Casibom",
-      "url": "https://tablamike.com",
-      "logo": "https://tablamike.com/logo.png",
+      "url": "https://emkadeneme.github.io/emkatss/",
+      "logo": "https://emkadeneme.github.io/emkatss//logo.png",
       "sameAs": [
         "https://www.instagram.com/casibom",
         "https://www.twitter.com/casibom"
@@ -150,17 +150,17 @@
     {
       "@type": "WebSite",
       "name": "Casibom",
-      "url": "https://tablamike.com",
+      "url": "https://emkadeneme.github.io/emkatss/",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://tablamike.com/?s={search_term_string}",
+        "target": "https://emkadeneme.github.io/emkatss//?s={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     },
     {
       "@type": "WebPage",
       "name": "Casibom Güncel Giriş",
-      "url": "https://tablamike.com",
+      "url": "https://emkadeneme.github.io/emkatss/",
       "description": "Casibom güncel giriş adresi tablamike.com! Canlı bahis, casino, slot oyunları ve özel bonuslarla hemen kazanmaya başla!",
       "inLanguage": "tr"
     },
@@ -171,7 +171,7 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Anasayfa",
-          "item": "https://tablamike.com"
+          "item": "https://emkadeneme.github.io/emkatss/"
         }
       ]
     },
